# fer-irg

./: 10b_geogebra-export.ggb  CMakeLists.txt  HomCoordLine3.cdy  README.md  dokumentacija.txt  upute-3b.txt  upute-4b.txt
documentation/: dokumentacija.md  upute-2a.txt
first/: CMakeLists.txt  upute-1a.txt
first/src/: utilities.h
first/src/ex00/: 70_gotcha.cpp  MaArray.h  book-mc-01.cpp  main.cpp  ooup_virtual_tables.cpp  opengl-tutorial-01.cpp
first/src/ex01a/: 1.cpp  2.cpp  3.cpp
first/src/ex02a/: 1.cpp
first/src/ex02b/: 1.cpp  triangle_data_model.h  triangle_demo.cpp
first/src/ex03b/: line_data_model.h  line_demo.cpp  line_painter.h
first/src/linalg/: abstract_matrix.cpp  abstract_matrix.h  abstract_vector.cpp  abstract_vector.h  demo_01.cpp  demo_02.cpp  i_matrix.h  i_vector.h  matrix.cpp  matrix.h  matrix_sub_matrix_view.h  matrix_transpose_view.h  matrix_vector_view.h  vector.h  vector_matrix_view.cpp  vector_matrix_view.h
first/src/utility/: color.h  line.h  point.h  triangle.h
src/: input.txt
src/ex00/: MaArray.h  bresenham.cpp  bresenham.h  cube.py  exceptions.txt  linalg_playground.cpp  playground.cpp  ref_vs_pointer_2.cpp  vtables.cpp
src/ex01a/: 2.cpp  3.cpp
src/ex01b/: 1.cpp  2.cpp  3.cpp
src/ex02a/: 1.cpp
src/ex02b/: triangle_data_model.h  triangle_demo.cpp  triangle_painter.cpp
src/ex03b/: line_data_model.h  line_painter.h
src/ex04a/: 3d_object_data_model.h  3d_object_demo.cpp  3d_object_renderer.h  demo.cpp
src/ex04b/: convex_polygon_data_model.h  convex_polygon_demo.cpp  convex_polygon_painter.h
src/ex06b/: demo1.cpp  demo2.cpp  demo3.cpp  pitanja.md  projecting_data_model.h  projecting_demo.cpp  projecting_renderer.h
src/ex07b/: demo1.cpp  demo2.cpp
src/ex08b/: bezier_data_model.h  bezier_demo.cpp  bezier_painter.h
src/ex10b/: input.txt  raytracing_data_model.h  raytracing_demo.cpp  raytracing_painter.h
src/ex11b/ifs-fractals/: ifs_data_model.h  ifs_demo.cpp  ifs_painter.h  paprat.txt  sierpinski_carpet.txt  sierpinski_triangle.txt
src/ex11b/mandelbrot/: mandelbrot_data_model.h  mandelbrot_demo.cpp  mandelbrot_painter.h
src/linalg/: abstract_matrix.cpp  abstract_matrix.h  abstract_vector.cpp  abstract_vector.h  demo_01.cpp  demo_02.cpp  i_matrix.h  i_vector.h  irg.cpp  irg.h  matrix.cpp  matrix.h  matrix_sub_matrix_view.cpp  matrix_sub_matrix_view.h  matrix_transpose_view.cpp  matrix_transpose_view.h  matrix_vector_view.cpp  matrix_vector_view.h  vector.cpp  vector.h  vector_matrix_view.cpp  vector_matrix_view.h
src/utility/: 3d_object_data_model.h  3d_object_renderer.h  bezier.h  color.h  edge.h  line.h  object_model.h  point.h  polygon.h  triangle.h  utilities.h
src/utility/rayTracing/: light.h  material.h  patch.h  ray.h  scene.h  scene_object.h  sphere.h
